--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
 	</parent>
 
 	<properties>
-	<properties>
+	
   <sonar.projectKey>Bhavikbb_sonar_product</sonar.projectKey>
   <sonar.organization>bhavik</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-</properties>	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
 	</properties>
